--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                     <h5>TCP SYN</h5>
                     <center>
                     <figure>
-                      <img src="images/tcp-syn.jpg" alt="TCP SYN" width="304" height="228">
+                      <img src="images/tcp-syn.jpg" alt="TCP SYN" width="504" height="228">
                       <figcaption>Figura 1 - Esquema do TCP SYN</figcaption>
                     </figure>
                     </center>
@@ -343,7 +343,7 @@
                     <h5>TCP Connect</h5>
                      <center>
                     <figure>
-                      <img src="images/tcp-connect.jpg" alt="TCP Connect" width="504" height="228">
+                      <img src="images/tcp-connect.jpg" alt="TCP Connect" width="304" height="228">
                       <figcaption>Figura 2 - Esquema do TCP Connect</figcaption>
                     </figure>
                     </center>
@@ -368,6 +368,12 @@
                         Tipo de varredura altamente camuflada devido à natureza cega. Para que funcione, são necessárias três máquinas:
                         a do invasor, a máquina zumbi e a máquina alvo.
                       </p>
+                      <center>
+                     <figure>
+                       <img src="images/idle.jpg" alt="Idle" width="800">
+                       <figcaption>Figura 3 - Esquema do Idle</figcaption>
+                     </figure>
+                     </center>
                       <p align = "justify">
                         A máquina zumbi é uma máquina que não está realizando absolutamente nenhuma conexão, pois será possível saber se
                         a porta máquina alvo está aberta através do IPID na máquina zumbi. IPID é um identificador que há em todo pacote
@@ -388,7 +394,7 @@
                     <center>
                     <figure>
                       <img src="images/ftp-bounce.jpg" alt="FTP Bounce" width="440" height="400">
-                      <figcaption>Figura 3 - Etapas do FTP Bounce</figcaption>
+                      <figcaption>Figura 4 - Etapas do FTP Bounce</figcaption>
                     </figure>
                     </center>
                     <p align = "justify">
@@ -447,7 +453,8 @@
               <li>[2] Ícone Connect disponibilizado por Freepik</li>
               <li>[3] Figura 1. Defenses Against TCP SYN Flooding Attacks - The Internet Protocol Journal - Volume 9, Number 4</li>
               <li>[4] Figura 2. INFOSEC INSTITUTE Port Scanning using Scapy</li>
-              <li>[5] Figura 3. Computer Security and PGP BLOG - What is an FTP Bounce Attack ?</li>
+              <li>[4] Figura 3. Nmap: a “Hacker Tool” for Security Professionals</li>
+              <li>[5] Figura 4. Computer Security and PGP BLOG - What is an FTP Bounce Attack ?</li>
               </p>
             </div>
           </section>
