alteração em algumas explicações dos tipos de varreduras

--- a/index.html
+++ b/index.html
@@ -322,8 +322,7 @@
                     <p align = "justify">
                       Nesse tipo, é enviado um pacote SYN tentando abrir uma conexão. Se for recebido uma
                       resposta SYN/ACK significa que a porta está ouvindo e caso seja recebido um RST como resposta,
-                      a porta não estará ouvindo. O diferencial é que quando é recebido um SYN/ACK indicando porta aberta,
-                      logo é enviado um RST para cancelar a conexão, assim na maioria das vezes, não é detectado nenhuma atividade.</p>
+                      a porta não estará ouvindo. O diferencial é que quando é recebido.</p>
                     </p>
 
                     <h5>ICMP</h5>
@@ -337,7 +336,9 @@
                     <p align = "justify">
                       Serviços UDP são amplamente difundidos pela rede e o escaneamento das portas que registram serviços UDP
                       costumam ser mais lentos, pois ao enviar um pacote UDP, ele espera por um certo tempo uma resposta.
-                      Quando a resposta não chega, supõe-se que a porta está aberta, caso contrário é recebido um erro com o respectivo erro.
+                      Quando a resposta não chega, supõe-se que a porta está aberta ou filtrada. Na presença de firewall, como
+                      não haverá resposta, o scan pode retornar como se a porta estivesse aberta, sendo que está filtrada. Em outros
+                      casos, será retornado um erro e a porta será classificada como fechada.
                     </p>
 
                     <h5>TCP Connect</h5>
@@ -351,21 +352,22 @@
                       Esse tipo é utilizado quando não é possível usar o TCP SYN. A diferença entre esses dois é que, no TCP Connect,
                       ao receber um SYN/ACK indicando porta aberta, o sinal de RST não é enviado, mas sim um ACK, estabelecendo uma
                       conexão com a porta. O estabelecimento dessa conexão demanda mais tempo e também é facilmente percebido por qualquer
-                      programa com o propósito de detectar alguma atividade estranha nas portas.
+                      programa com o propósito de detectar alguma atividade estranha nas portas, pois informações do IP invasor
+                      estão nessa resposta.
                     </p>
 
                     <h5>X-MAS Tree, TCP Null e FIN</h5>
                     <p align = "justify">
-                      Esses três tipos de varredura tem o comportamento muito parecidos. A diferença são os flags TCP dos pacotes de sondagem.
-                      No X-mas é enviado um pacote com os flags FIN, PSH e URG ativados, No FIN é marcado o flag FIN (como o próprio nome já diz),
-                      já o TCP Null não marca nenhum flag no pacote.
+                      Esses três tipos de varredura tem o comportamento muito parecidos. A diferença são as flags TCP dos pacotes de sondagem.
+                      No X-mas é enviado um pacote com as flags FIN, PSH e URG ativados, No FIN é marcado a flag FIN (como o próprio nome já diz),
+                      já o TCP Null não marca nenhuma flag no pacote.
                       Quando nenhuma resposta é recebida, a porta está aberta. Caso um RST ou ACK seja recebido, significa que a porta está fechada.
                     </p>
 
                     <h5>Idle</h5>
 
                       <p align = "justify">
-                        Tipo de varredura altamente camuflada devido à natureza cega. Para que funcione, são necessárias três máquinas:
+                        Tipo de varredura altamente camuflada devido à sua natureza cega. Para que funcione, são necessárias três máquinas:
                         a do invasor, a máquina zumbi e a máquina alvo.
                       </p>
                       <center>
@@ -376,17 +378,17 @@
                      </center>
                       <p align = "justify">
                         A máquina zumbi é uma máquina que não está realizando absolutamente nenhuma conexão, pois será possível saber se
-                        a porta máquina alvo está aberta através do IPID na máquina zumbi. IPID é um identificador que há em todo pacote
-                        que é incrementado sequencialmente.
+                        a porta da máquina alvo está aberta através do IPID na máquina zumbi. IPID é um identificador que há em todo pacote
+                        e é incrementado sequencialmente.
                       </p>
                       <p align = "justify">
-                        O invasor manda um SYN/ACK para o zumbi que que não espera conexão, então ele manda um RST e retorna um IPID
+                        O invasor manda um SYN/ACK para o zumbi que não espera conexão, então ele manda um RST e retorna um IPID
                         incrementado em um. Em seguida, a máquina invasora manda um SYN para a máquina alvo que retorna um SYN/ACK para
                         o zumbi que novamente retorna outro RST, incrementando o IPID em mais um novamente. Assim, se a máquina invasora
                         manda SYN/ACK novamente para o zumbi, ele retornará o RST com um IPID incrementado em dois, mostrando assim que a
-                        porta testada da máquina alvo está aberta. Quando a porta está fechada, quando o alvo recebe um SYN do invasor,
-                        ela não manda um SYN/ACK para o zumbi e ele não incrementa mais o seu IPID. Assim, quando o zumbi incrementa em
-                        um o IPDI, o alvo está fechado, caso contrário está aberto.
+                        porta testada da máquina alvo está aberta. Se a porta estiver fechada e ela receber um SYN, o retorno será um
+                        RST direcionado ao zumbi que não terá seu IPID incrementado. Assim, se o invasor mandar um SYN/ACK novamente
+                        para o zumbi, ele retornará um RST com o seu IPID incrementado apenas em um.
                       </p>
                     </p>
 
@@ -398,7 +400,9 @@
                     </figure>
                     </center>
                     <p align = "justify">
-                      Um servidor FTP tenta enviar algum arquivo por alguma porta do host invadido e a mensagem de erro recebida diz se a porta está ou não aberta.
+                      Nesse caso, o invasor solicita a um servidor FTP que um arquivo seja enviado a uma determinada
+                      porta para o alvo. O alvo retorna informações para o servidor FTP e esse servidor entrega essa
+                      informação para o invasor. Assim, o invasor terá informações sobre a determinada porta.
                     </p>
 
                     <h5>TCP ACK</h5>
