--- a/index.html
+++ b/index.html
@@ -439,7 +439,6 @@
                 <a href="#biblio1">ZMap: Fast Internet-wide Scanning and Its Security Applicatons</a>
                 <a href="#biblio2">Software-Defined Networking: A Comprehensive Survey</a>
                 <a href="#biblio3">Computer Networking: A Top-Down Approach</a>
-                <a href="#biblio4">Lorem ipsum</a>
                 <a href="#biblioImagens">Imagens</a>
               </ul>
 
@@ -468,7 +467,7 @@
     <div class="mdl-layout__tab-panel" id="conclusao">
           <section class="section--center mdl-grid mdl-grid--no-spacing">
             <div class="mdl-cell mdl-cell--12-col">
-              <h4><i>Conclusão</i></h4>
+              <h4>Conclusão</h4>
                     <p align = "justify">A varredura de portas, além de possibilitar a descoberta de quais serviços estão sendo executados nos hosts de uma determinada rede, o que é interessante para um administrador de redes, por exemplo, também detecta portas vulneráveis que podem ser usadas para ataques externos. Assim, a varredura de portas é uma ferramenta poderosa tanto para usuários com boas intenções, como para usuários maliciosos.
                     </p>
                     <p align = "justify">
