--- a/index.html
+++ b/index.html
@@ -56,10 +56,11 @@
  		  <a href="#motivacao" class="mdl-layout__tab">Motivação</a>
           <a href="#nmap" class="mdl-layout__tab">NMap</a>
           <a href="#zmap" class="mdl-layout__tab">ZMap</a>
-           <a href="#comparacoes" class="mdl-layout__tab">Comparações</a>
-           <a href="#tecnicas" class="mdl-layout__tab">Principais Técnicas</a>
+          <a href="#comparacoes" class="mdl-layout__tab">Comparações</a>
+          <a href="#tecnicas" class="mdl-layout__tab">Principais Técnicas</a>
           <a href="#conclusao" class="mdl-layout__tab">Conclusão</a>
-           <a href="#bibliografia" class="mdl-layout__tab">Bibliografia</a>
+          <a href="#perguntas" class="mdl-layout__tab">Perguntas</a>
+          <a href="#bibliografia" class="mdl-layout__tab">Bibliografia</a>
         </div>
       </header>
       <main class="mdl-layout__content">
@@ -481,7 +482,7 @@
           </section>
     </div>
 
-        <div class="mdl-layout__tab-panel" id="comparacoes">
+    <div class="mdl-layout__tab-panel" id="comparacoes">
           <section class="section--center mdl-grid mdl-grid--no-spacing">
             <div class="mdl-cell mdl-cell--12-col">
               <h4>NMap <i>vs</i> ZMap</h4>
@@ -495,6 +496,19 @@
             </div>
           </section>
     </div>
+
+    <div class="mdl-layout__tab-panel" id="perguntas">
+          <section class="section--center mdl-grid mdl-grid--no-spacing">
+            <div class="mdl-cell mdl-cell--12-col">
+              <h4><b>1.</b> Explique os motivos que justifiquem dizer que o ZMap é <i>stateless</i>.</h4>
+                    <p align = "justify">
+               <h4><b>2.</b> Explique como é possível que ocorra comunicação anônima através do ZMap.</h4>
+                    <p align = "justify">
+            </div>
+          </section>
+    </div>
+
+
 
         <footer class="mdl-mega-footer">
 
